[tool.poetry]
name = "energy-forecast"
version = "0.1.0"
description = "Use of different forecasting techniques to predict energy prices in Spain"
authors = ["pachacutexx <ariel.pajuelo@student.ie.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
